samples/_failures_safe/1761350897_aa93d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_427215ba.c: In function ‘main’:
./samples/SAFE/__tmp_427215ba.c:151:28: error: missing terminating " character
  151 |                     printf("Matrix multiplication successful:\
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_427215ba.c:151:21: error: expected expression at end of input
  151 |                     printf("Matrix multiplication successful:\
      |                     ^~~~~~
./samples/SAFE/__tmp_427215ba.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_427215ba.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_427215ba.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_427215ba.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_427215ba.c:151:21: error: expected declaration or statement at end of input
